my-apps/practice/radar-practice-prod/preview.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radar-preview
  labels:
    delivery.vanillax.dev/weights: git
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway-internal-technitium
    namespace: gateway
    sectionName: https
  hostnames:
  - radar-practice-prod-v2.vanillax.me
  rules:
  - backendRefs:
    - name: radar-api-canary
      port: 8080
      weight: 1
